feat: add Skaffold and fix errors
